--- a/css/elements.css
+++ b/css/elements.css
@@ -1,6 +1,7 @@
 #card-element {
   padding: 2%;
-  margin: 2%;
+  margin: 2% auto;
+  max-width: 800px;
   background-color: ghostwhite;
   -webkit-box-shadow: 10px 10px 7px -6px rgba(0,0,0,0.81);
   -moz-box-shadow: 10px 10px 7px -6px rgba(0, 0, 0, 0.81);
