--- a/css/elements.css
+++ b/css/elements.css
@@ -6,10 +6,14 @@
   padding: 2%;
   margin: 2% auto;
   max-width: 800px;
-  background-color: ghostwhite;
-  -webkit-box-shadow: 10px 10px 7px -6px rgba(0,0,0,0.81);
-  -moz-box-shadow: 10px 10px 7px -6px rgba(0, 0, 0, 0.81);
-  box-shadow: 10px 10px 7px -6px rgba(0, 0, 0, 0.81);
+  background-color: #f0f0f0;
+  -webkit-box-shadow: 0 0 1px 1px rgba(0,0,0,0.2);
+  -moz-box-shadow: 0 0 1px 1px rgba(0,0,0,0.2);
+  box-shadow: 0 0 1px 1px rgba(0,0,0,0.2);
+  border: 1px solid transparent;
+}
+#card-element.StripeElement--focus {
+  border: 1px solid gold;
 }
 
 #card-errors {
